--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
              	    <div class="col-md-5 col-sm-12 mr-auto about-slider">
              	    	    <div class="carousel-wrap">
 														  <div class="about-carousel owl-carousel">
-														    <div class="item"><img src="./images/slider-about.jpg"></div>
+														    <div class="item"><img src="./images/gallery-1.jpg"></div>
+                                                            <div class="item"><img src="./images/gallery-2.jpg"></div><div class="item"><img src="./images/gallery-3.jpg"></div>
 														    
 														   
 														  </div>
